# GaiaAlertsPy

./: .gitignore  README.md  README.rst  readthedocs.yaml  setup.cfg  setup.py
.eggs/setuptools_scm-8.1.0-py3.9.egg/EGG-INFO/: requires.txt
GaiaAlertsPy/: alert.py  bprpspec.py  history.py
GaiaAlertsPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
WaveCalibFile/: readme.txt
alert/: queryalerts.py
docs/: Cite.rst  conf.py  index.rst  introduction.rst  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/source/: index.doctree  started.doctree  usage.doctree
docs/_build/_sources/source/: index.rst.txt  started.rst.txt  usage.rst.txt
docs/_build/source/: index.html  started.html  usage.html
docs/_static/css/: custom.css
docs/source/: GaiaX-alerts.ipynb  Testing new ZTF Tool.ipynb  Untitled.ipynb  bprp-spectra.ipynb  citation.rst  conf.py  download-spec.ipynb  getting-started.ipynb  index.rst  nominalXpSamplePositions_colsSimple_PUBISHED.csv  usage.rst  wip-xp-spec.ipynb
docs/source/other/: alerts.csv
docs/source/other/WaveCalibFile/: conv_bp.txt  conv_rp.txt
licenses/: LICENSE.rst
queryalert/: __init__.py  queryalerts.py
scr/: queryalerts.py
